--- a/package.json
+++ b/package.json
@@ -21,18 +21,23 @@
   },
   "homepage": "https://drosse.dev",
   "dependencies": {
+    "@jota-one/drosse": "^2.4.0",
     "@tauri-apps/api": "^1.0.0-beta.8",
+    "ansi-to-html": "^0.7.2",
     "core-js": "^3.6.5",
+    "mitt": "^3.0.0",
+    "monaco-editor": "^0.30.1",
     "vue": "^3.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "monaco-editor-webpack-plugin": "^6.0.0",
+    "postcss-nested": "^4.2.3",
     "vue-cli-plugin-tauri": "~1.0.0-beta.6"
   },
   "eslintConfig": {
