--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,7 @@ tauri-build = { version = "1.0.0-beta.3" }
 [dependencies]
 chrono = "0.4.19"
 home = "0.5.3"
+open = "2.0.2"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 socket2 = { version = "0.3.19", features = ["reuseport"] }
